2011-06-23  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.4.41.1 Released.

	* AST-2011-010

2011-04-25  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.4.41 Released.

	* AST-2011-005, AST-2011-006

	* Reverted part of r314607, as it can introduce a regression.
	  Specifically, the security check for the "system" privilege was
	  removed. If a user had the "call" privilege but not the "system" privilege,
	  they would lose the ability to execute the system app and dialplan functions
	  that run commands in a shell. This branch never used the "system" privilege
	  for that purpose and did not need to be patched.
	  (AST-2011-006)

2011-02-23  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.4.41-rc1 Released.

2011-02-21 14:57 +0000 [r308413]  Matthew Nicholson <mnicholson@digium.com>

	* main/udptl.c: Properly check the bounds of arrays when decoding
	  UDPTL packets. Also, remove broken support for receiving UDPTL
	  packets larger than 16k. That shouldn't ever happen anyway.
	  AST-2011-002 FAX-281

2011-02-15 23:32 +0000 [r308002]  Jason Parker <jparker@digium.com>

	* apps/app_queue.c: Fix regression that changed behavior of queues
	  when ringing a queue member. This reverts r298596, which was to
	  fix a highly bizarre and contrived issue with a queue member that
	  called into his own queue being transferred back into his own
	  queue. I couldn't reproduce that issue in any way. I think one of
	  the other recent transfer fixes actually fixed this. (closes
	  issue #18747) Reported by: vrban

2011-02-11 00:29 +0000 [r307623]  Richard Mudgett <rmudgett@digium.com>

	* channels/chan_dahdi.c: Reentrancy problem if outgoing call gets
	  different B channel than requested. The chan_dahdi
	  pri_fixup_principle() routine needs to protect the Asterisk
	  channel with the channel lock when it changes the technology
	  private pointer to a new private structure. * Added lock
	  protection while pri_fixup_principle() moves a call from one