@@ -1,92 +1,0 @@
-                                Release Summary
-
-                               asterisk-1.4.41.1
-
-                                Date: 2011-06-23
-
-                           <asteriskteam@digium.com>
-
-     ----------------------------------------------------------------------
-
-                               Table of Contents
-
-    1. Summary
-    2. Contributors
-    3. Other Changes
-    4. Diffstat
-
-     ----------------------------------------------------------------------
-
-                                    Summary
-
-                                 [Back to Top]
-
-   This release has been made to address one or more security vulnerabilities
-   that have been identified. A security advisory document has been published
-   for each vulnerability that includes additional information. Users of
-   versions of Asterisk that are affected are strongly encouraged to review
-   the advisories and determine what action they should take to protect their
-   systems from these issues.
-
-   Security Advisories: AST-2011-010
-
-   The data in this summary reflects changes that have been made since the
-   previous release, asterisk-1.4.41.
-
-     ----------------------------------------------------------------------
-
-                                  Contributors
-
-                                 [Back to Top]
-
-   This table lists the people who have submitted code, those that have
-   tested patches, as well as those that reported issues on the issue tracker
-   that were resolved in this release. For coders, the number is how many of
-   their patches (of any size) were committed into this release. For testers,
-   the number is the number of times their name was listed as assisting with
-   testing a patch. Finally, for reporters, the number is the number of
-   issues that they reported that were closed by commits that went into this
-   release.
-
-     Coders                   Testers                  Reporters              
-   2 lmadsen                
-
-     ----------------------------------------------------------------------
-
-                      Commits Not Associated with an Issue
-
-                                 [Back to Top]
-
-   This is a list of all changes that went into this release that did not
-   directly close an issue from the issue tracker. The commits may have been
-   marked as being related to an issue. If that is the case, the issue
-   numbers are listed here, as well.
-
-   +------------------------------------------------------------------------+
-   | Revision | Author  | Summary                       | Issues Referenced |
-   |----------+---------+-------------------------------+-------------------|
-   | 324626   | lmadsen | Create Asterisk 1.4.41.1 from |                   |
-   |          |         | 1.4.41                        |                   |
-   |----------+---------+-------------------------------+-------------------|
-   | 324702   | lmadsen | Commit changes per            |                   |
-   |          |         | AST-2011-010                  |                   |
-   +------------------------------------------------------------------------+
-
-     ----------------------------------------------------------------------
-
-                                Diffstat Results
-
-                                 [Back to Top]
-
-   This is a summary of the changes to the source code that went into this
-   release that was generated using the diffstat utility.
-
- .version                     |    2
- ChangeLog                    |    6
- asterisk-1.4.41-summary.html |  257 ----------------------------
- asterisk-1.4.41-summary.txt  |  384 -------------------------------------------
- channels/chan_iax2.c         |   14 +
- res/res_features.c           |   15 +
- 6 files changed, 32 insertions(+), 646 deletions(-)
-
-     ----------------------------------------------------------------------
