@@ -1,3 +1,9 @@
+2011-06-28  Leif Madsen <lmadsen@digium.com>
+
+	* Asterisk 1.4.41.2 Released.
+
+	* AST-2011-011
+
 2011-06-23  Leif Madsen <lmadsen@digium.com>
 
 	* Asterisk 1.4.41.1 Released.
